--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id="page">
 		<h1>Love Love Panda Desu</h1>
 		<p id="title">The best place for panda lovers</p>
-		<img src="assets/img/uno.jpg" alt="panda">
+		<img id=portadas src="assets/img/uno.jpg" alt="panda">
 
 		<div class="contenido">
 			<div id="caja1">
@@ -25,13 +25,16 @@
 				 </div>
 		</div>
 
-		<img src="assets/img/dos.jpg" alt="panda">
-		<div class="pictures">
-			<h3>Pictures</h3>
-			<p></p>
+		<img id=portadas src="assets/img/dos.jpg" alt="panda">
+
+		<div class="color" id="pictures">
+		
+		<h3>Pictures</h3>
+		<div id="PicturesPanda">
+		</div>
 		</div>
 
-		<img src="assets/img/tres.jpg" alt="panda">
+		<img id=portadas src="assets/img/tres.jpg" alt="panda">
 		<footer>Love Love Panda - Kely Vargaya 2017</footer>
 	 </div>
 	<script src="assets/js/main.js"></script>
