--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
 		<img id=portadas src="assets/img/dos.jpg" alt="panda">
 
 		<div class="color" id="pictures">
-		
-		<h3>Pictures</h3>
-		<div id="PicturesPanda">
-		</div>
-		</div>
+
+			<h3>Pictures</h3>
+			<div id="PicturesPanda"></div>
+			</div>
 
 		<img id=portadas src="assets/img/tres.jpg" alt="panda">
 		<footer>Love Love Panda - Kely Vargaya 2017</footer>
